# agent-compliance-kit

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/agent_compliance_kit/: __init__.py  cli.py  core.py
tests/: test_core.py
